<?xml version="1.0"?>
<package format="2">
  <name>motion_control</name>
  <version>1.0.0</version>
  <description>Motion control subscriber for TurtleBot3 gesture teleoperation</description>

  <maintainer email="tytus.felbor@icloud.com">Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
