<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_gesture</name>
  <version>1.0.0</version>
  <description>Hand gesture recognition node using MediaPipe for TurtleBot3 control</description>

  <maintainer email="tytus.felbor@icloud.com">Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-pip</exec_depend>

</package>
